test/kubernetes/e2e/features/istio/inputs/setup.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: httpbin
  labels:
    istio-injection: enabled
---
apiVersion: v1
kind: Pod
metadata:
  name: httpbin
  namespace: httpbin
  labels:
    app: httpbin
spec:
  containers:
    - image: docker.io/mccutchen/go-httpbin:v2.6.0
      imagePullPolicy: IfNotPresent
      name: httpbin
      command: [ go-httpbin ]
      args:
        - "-port"
        - "8080"
        - "-max-duration"
        - "600s" # override default 10s
      ports:
        - containerPort: 8080
---
apiVersion: v1
kind: Namespace
metadata:
  name: curl
---
apiVersion: v1
kind: Pod
metadata:
  name: curl
  namespace: curl
  labels:
    app: curl
    version: v1
spec:
  containers:
    - name: curl
      image: curlimages/curl:7.83.1
      imagePullPolicy: IfNotPresent
      command:
        - "tail"
        - "-f"
        - "/dev/null"
